@@ -70,6 +70,11 @@ Bug Fixes
 * LUCENE-4705: Pass on FilterStrategy in FilteredQuery if the filtered query is 
   rewritten. (Simon Willnauer)
 
+* LUCENE-4550: Shapes wider than 180 degrees would use too much accuracy for the
+  PrefixTree based SpatialStrategy. For a pathological case of nearly 360
+  degrees and barely any height, it would generate so many indexed terms
+  (> 500k) that it could even cause an OutOfMemoryError. Fixed. (David Smiley)
+
 ======================= Lucene 4.1.0 =======================
 
 Changes in backwards compatibility policy
